// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: bitbucket cloud 1`] = `
<div
  className="bordered"
>
  <AlmTabRenderer
    alm="bitbucket"
    branchesEnabled={true}
    definitionStatus={Object {}}
    definitions={Array []}
    form={[Function]}
    help={
      <FormattedMessage
        defaultMessage="settings.almintegration.bitbucketcloud.info"
        id="settings.almintegration.bitbucketcloud.info"
        values={
          Object {
            "link": <Link
              onlyActiveOnIndex={false}
              style={Object {}}
              target="_blank"
              to="/documentation/analysis/bitbucket-cloud-integration/"
            >
              learn_more
            </Link>,
          }
        }
      />
    }
    loadingAlmDefinitions={false}
    loadingProjectCount={false}
    multipleAlmEnabled={true}
    onCancel={[MockFunction]}
    onCheck={[MockFunction]}
    onCreate={[MockFunction]}
    onDelete={[MockFunction]}
    onEdit={[MockFunction]}
    onSubmit={[MockFunction]}
    submitting={true}
    success={false}
  />
</div>
`;

exports[`should render correctly: bitbucket form 1`] = `
<BitbucketForm
  formData={
    Object {
      "key": "key",
      "personalAccessToken": "asdf1234",
      "url": "http://bbs.enterprise.com",
    }
  }
  isCreating={false}
  onFieldChange={[MockFunction]}
  onSelectVariant={[MockFunction]}
/>
`;

exports[`should render correctly: bitbucket server 1`] = `
<div
  className="bordered"
>
  <AlmTabRenderer
    alm="bitbucket"
    branchesEnabled={true}
    definitionStatus={Object {}}
    definitions={Array []}
    form={[Function]}
    help={
      <React.Fragment>
        <h3>
          onboarding.create_project.pat_help.title
        </h3>
        <p
          className="big-spacer-top"
        >
          settings.almintegration.bitbucket.help_1
        </p>
        <ul
          className="big-spacer-top list-styled"
        >
          <li>
            settings.almintegration.bitbucket.help_2
          </li>
          <li>
            settings.almintegration.bitbucket.help_3
          </li>
        </ul>
        <p
          className="big-spacer-top big-spacer-bottom"
        >
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            target="_blank"
            to="/documentation/analysis/bitbucket-integration/"
          >
            learn_more
          </Link>
        </p>
      </React.Fragment>
    }
    loadingAlmDefinitions={false}
    loadingProjectCount={false}
    multipleAlmEnabled={true}
    onCancel={[MockFunction]}
    onCheck={[MockFunction]}
    onCreate={[MockFunction]}
    onDelete={[MockFunction]}
    onEdit={[MockFunction]}
    onSubmit={[MockFunction]}
    submitting={true}
    success={false}
  />
</div>
`;

exports[`should render correctly: default 1`] = `
<div
  className="bordered"
>
  <AlmTabRenderer
    alm="bitbucket"
    branchesEnabled={true}
    definitionStatus={Object {}}
    definitions={Array []}
    form={[Function]}
    loadingAlmDefinitions={false}
    loadingProjectCount={false}
    multipleAlmEnabled={true}
    onCancel={[MockFunction]}
    onCheck={[MockFunction]}
    onCreate={[MockFunction]}
    onDelete={[MockFunction]}
    onEdit={[MockFunction]}
    onSubmit={[MockFunction]}
    submitting={true}
    success={false}
  />
</div>
`;
